// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 1`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 1.7489999532699585,
    "edgeIds": Array [
      "basketball-eat",
      "basketball-run",
      "basketball-sleep",
      "basketball-skate",
    ],
    "id": "basketball",
    "prop1-COLLECTIVE_AVG": 7.571469783782959,
    "prop1-SINGLE_AVG": 7.571469783782959,
    "prop1-SINGLE_TALLY": 1.7489999532699585,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 1.4259999990463257,
    "edgeIds": Array [
      "basketball-eat",
      "eat-run",
      "eat-sleep",
      "eat-skate",
    ],
    "id": "eat",
    "prop1-COLLECTIVE_AVG": 5.913390159606934,
    "prop1-SINGLE_AVG": 5.913390159606934,
    "prop1-SINGLE_TALLY": 1.4259999990463257,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5929999947547913,
    "edgeIds": Array [
      "basketball-run",
      "eat-run",
      "run-sleep",
      "run-skate",
    ],
    "id": "run",
    "prop1-COLLECTIVE_AVG": 6.635749816894531,
    "prop1-SINGLE_AVG": 6.635749816894531,
    "prop1-SINGLE_TALLY": 0.5929999947547913,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 2.5920000076293945,
    "edgeIds": Array [
      "basketball-sleep",
      "eat-sleep",
      "run-sleep",
      "skate-sleep",
    ],
    "id": "sleep",
    "prop1-COLLECTIVE_AVG": 6.530670166015625,
    "prop1-SINGLE_AVG": 6.530670166015625,
    "prop1-SINGLE_TALLY": 2.5920000076293945,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.6759999990463257,
    "edgeIds": Array [
      "basketball-skate",
      "skate-sleep",
      "eat-skate",
      "run-skate",
    ],
    "id": "skate",
    "prop1-COLLECTIVE_AVG": 7.41864013671875,
    "prop1-SINGLE_AVG": 7.41864013671875,
    "prop1-SINGLE_TALLY": 0.6759999990463257,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 2`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "basketball-eat",
    "nodeId1": "basketball",
    "nodeId2": "eat",
    "prop1-COLLECTIVE_AVG": 8.143219947814941,
    "prop1-SINGLE_AVG": 8.143219947814941,
    "prop1-SINGLE_TALLY": 0.5830000042915344,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.25,
    "id": "basketball-run",
    "nodeId1": "basketball",
    "nodeId2": "run",
    "prop1-COLLECTIVE_AVG": 9,
    "prop1-SINGLE_AVG": 9,
    "prop1-SINGLE_TALLY": 0.25,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 1.7489999532699585,
    "id": "basketball-sleep",
    "nodeId1": "basketball",
    "nodeId2": "sleep",
    "prop1-COLLECTIVE_AVG": 7.571469783782959,
    "prop1-SINGLE_AVG": 7.571469783782959,
    "prop1-SINGLE_TALLY": 1.7489999532699585,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5929999947547913,
    "id": "eat-run",
    "nodeId1": "eat",
    "nodeId2": "run",
    "prop1-COLLECTIVE_AVG": 6.635749816894531,
    "prop1-SINGLE_AVG": 6.635749816894531,
    "prop1-SINGLE_TALLY": 0.5929999947547913,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 1.4259999990463257,
    "id": "eat-sleep",
    "nodeId1": "eat",
    "nodeId2": "sleep",
    "prop1-COLLECTIVE_AVG": 5.913390159606934,
    "prop1-SINGLE_AVG": 5.913390159606934,
    "prop1-SINGLE_TALLY": 1.4259999990463257,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5929999947547913,
    "id": "run-sleep",
    "nodeId1": "run",
    "nodeId2": "sleep",
    "prop1-COLLECTIVE_AVG": 6.635749816894531,
    "prop1-SINGLE_AVG": 6.635749816894531,
    "prop1-SINGLE_TALLY": 0.5929999947547913,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.6660000085830688,
    "id": "basketball-skate",
    "nodeId1": "basketball",
    "nodeId2": "skate",
    "prop1-COLLECTIVE_AVG": 7.5,
    "prop1-SINGLE_AVG": 7.5,
    "prop1-SINGLE_TALLY": 0.6660000085830688,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.6759999990463257,
    "id": "skate-sleep",
    "nodeId1": "sleep",
    "nodeId2": "skate",
    "prop1-COLLECTIVE_AVG": 7.41864013671875,
    "prop1-SINGLE_AVG": 7.41864013671875,
    "prop1-SINGLE_TALLY": 0.6759999990463257,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.009999999776482582,
    "id": "eat-skate",
    "nodeId1": "eat",
    "nodeId2": "skate",
    "prop1-COLLECTIVE_AVG": 2,
    "prop1-SINGLE_AVG": 2,
    "prop1-SINGLE_TALLY": 0.009999999776482582,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.009999999776482582,
    "id": "run-skate",
    "nodeId1": "run",
    "nodeId2": "skate",
    "prop1-COLLECTIVE_AVG": 2,
    "prop1-SINGLE_AVG": 2,
    "prop1-SINGLE_TALLY": 0.009999999776482582,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
    "prop2-SINGLE_TALLY": 0,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 3`] = `
Object {
  "basketball": Object {
    "prop1-COLLECTIVE_AVG": 0.24812213346501893,
    "prop1-SINGLE_AVG": 0.24812213346501893,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
  },
  "eat": Object {
    "prop1-COLLECTIVE_AVG": 0.1838522871513727,
    "prop1-SINGLE_AVG": 0.1838522871513727,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
  },
  "run": Object {
    "prop1-COLLECTIVE_AVG": 0.19831425137203518,
    "prop1-SINGLE_AVG": 0.19831425137203518,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
  },
  "skate": Object {
    "prop1-COLLECTIVE_AVG": 0.15758350747441902,
    "prop1-SINGLE_AVG": 0.15758350747441902,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
  },
  "sleep": Object {
    "prop1-COLLECTIVE_AVG": 0.21212782053715412,
    "prop1-SINGLE_AVG": 0.21212782053715412,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 4`] = `
Object {
  "basketball": Object {
    "prop1-COLLECTIVE_AVG": 0.2564119924528247,
    "prop1-SINGLE_AVG": 0.2564119924528247,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
  },
  "eat": Object {
    "prop1-COLLECTIVE_AVG": 0.18061925382889568,
    "prop1-SINGLE_AVG": 0.18061925382889568,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
  },
  "run": Object {
    "prop1-COLLECTIVE_AVG": 0.19318837563763686,
    "prop1-SINGLE_AVG": 0.19318837563763686,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
  },
  "skate": Object {
    "prop1-COLLECTIVE_AVG": 0.15058242846262604,
    "prop1-SINGLE_AVG": 0.15058242846262604,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
  },
  "sleep": Object {
    "prop1-COLLECTIVE_AVG": 0.21919794961801653,
    "prop1-SINGLE_AVG": 0.21919794961801653,
    "prop2-COLLECTIVE_AVG": 0,
    "prop2-SINGLE_AVG": 0,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 5`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 1.0829999446868896,
    "edgeIds": Array [
      "basketball-eat",
      "basketball-run",
      "basketball-sleep",
    ],
    "id": "basketball",
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop3-SINGLE_TALLY": 0,
    "prop4-COLLECTIVE_AVG": 7.615419864654541,
    "prop4-SINGLE_AVG": 7.615419864654541,
    "prop4-SINGLE_TALLY": 1.0829999446868896,
  },
  Object {
    "COLLECTIVE_TALLY": 0.9160000085830688,
    "edgeIds": Array [
      "basketball-eat",
      "eat-run",
      "eat-sleep",
    ],
    "id": "eat",
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop3-SINGLE_TALLY": 0,
    "prop4-COLLECTIVE_AVG": 7.000539779663086,
    "prop4-SINGLE_AVG": 7.000539779663086,
    "prop4-SINGLE_TALLY": 0.9160000085830688,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "edgeIds": Array [
      "basketball-run",
      "eat-run",
      "run-sleep",
    ],
    "id": "run",
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop3-SINGLE_TALLY": 0,
    "prop4-COLLECTIVE_AVG": 6.715270042419434,
    "prop4-SINGLE_AVG": 6.715270042419434,
    "prop4-SINGLE_TALLY": 0.5830000042915344,
  },
  Object {
    "COLLECTIVE_TALLY": 1.4160000085830688,
    "edgeIds": Array [
      "basketball-sleep",
      "eat-sleep",
      "run-sleep",
    ],
    "id": "sleep",
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop3-SINGLE_TALLY": 0,
    "prop4-COLLECTIVE_AVG": 7.000349998474121,
    "prop4-SINGLE_AVG": 7.000349998474121,
    "prop4-SINGLE_TALLY": 1.4160000085830688,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 6`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "basketball-eat",
    "nodeId1": "basketball",
    "nodeId2": "eat",
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop3-SINGLE_TALLY": 0,
    "prop4-COLLECTIVE_AVG": 8.143219947814941,
    "prop4-SINGLE_AVG": 8.143219947814941,
    "prop4-SINGLE_TALLY": 0.5830000042915344,
  },
  Object {
    "COLLECTIVE_TALLY": 0.25,
    "id": "basketball-run",
    "nodeId1": "basketball",
    "nodeId2": "run",
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop3-SINGLE_TALLY": 0,
    "prop4-COLLECTIVE_AVG": 9,
    "prop4-SINGLE_AVG": 9,
    "prop4-SINGLE_TALLY": 0.25,
  },
  Object {
    "COLLECTIVE_TALLY": 1.0829999446868896,
    "id": "basketball-sleep",
    "nodeId1": "basketball",
    "nodeId2": "sleep",
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop3-SINGLE_TALLY": 0,
    "prop4-COLLECTIVE_AVG": 7.615419864654541,
    "prop4-SINGLE_AVG": 7.615419864654541,
    "prop4-SINGLE_TALLY": 1.0829999446868896,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "eat-run",
    "nodeId1": "eat",
    "nodeId2": "run",
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop3-SINGLE_TALLY": 0,
    "prop4-COLLECTIVE_AVG": 6.715270042419434,
    "prop4-SINGLE_AVG": 6.715270042419434,
    "prop4-SINGLE_TALLY": 0.5830000042915344,
  },
  Object {
    "COLLECTIVE_TALLY": 0.9160000085830688,
    "id": "eat-sleep",
    "nodeId1": "eat",
    "nodeId2": "sleep",
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop3-SINGLE_TALLY": 0,
    "prop4-COLLECTIVE_AVG": 7.000539779663086,
    "prop4-SINGLE_AVG": 7.000539779663086,
    "prop4-SINGLE_TALLY": 0.9160000085830688,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "run-sleep",
    "nodeId1": "run",
    "nodeId2": "sleep",
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop3-SINGLE_TALLY": 0,
    "prop4-COLLECTIVE_AVG": 6.715270042419434,
    "prop4-SINGLE_AVG": 6.715270042419434,
    "prop4-SINGLE_TALLY": 0.5830000042915344,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 7`] = `
Object {
  "basketball": Object {
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop4-COLLECTIVE_AVG": 0.27355327491630926,
    "prop4-SINGLE_AVG": 0.27355327491630926,
  },
  "eat": Object {
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop4-COLLECTIVE_AVG": 0.24222621043356943,
    "prop4-SINGLE_AVG": 0.24222621043356943,
  },
  "run": Object {
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop4-COLLECTIVE_AVG": 0.24724753152762263,
    "prop4-SINGLE_AVG": 0.24724753152762263,
  },
  "sleep": Object {
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop4-COLLECTIVE_AVG": 0.23697298312249868,
    "prop4-SINGLE_AVG": 0.23697298312249868,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 8`] = `
Object {
  "basketball": Object {
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop4-COLLECTIVE_AVG": 0.2739410643554668,
    "prop4-SINGLE_AVG": 0.2739410643554668,
  },
  "eat": Object {
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop4-COLLECTIVE_AVG": 0.2418584351280758,
    "prop4-SINGLE_AVG": 0.2418584351280758,
  },
  "run": Object {
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop4-COLLECTIVE_AVG": 0.24818189009777597,
    "prop4-SINGLE_AVG": 0.24818189009777597,
  },
  "sleep": Object {
    "prop3-COLLECTIVE_AVG": 0,
    "prop3-SINGLE_AVG": 0,
    "prop4-COLLECTIVE_AVG": 0.23601861041868105,
    "prop4-SINGLE_AVG": 0.23601861041868105,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 9`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 1.0829999446868896,
    "edgeIds": Array [
      "basketball-eat",
      "basketball-run",
      "basketball-sleep",
    ],
    "id": "basketball",
    "prop5-COLLECTIVE_AVG": 7.615419864654541,
    "prop5-SINGLE_AVG": 7.615419864654541,
    "prop5-SINGLE_TALLY": 1.0829999446868896,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
    "prop6-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.9160000085830688,
    "edgeIds": Array [
      "basketball-eat",
      "eat-run",
      "eat-sleep",
    ],
    "id": "eat",
    "prop5-COLLECTIVE_AVG": 7.000539779663086,
    "prop5-SINGLE_AVG": 7.000539779663086,
    "prop5-SINGLE_TALLY": 0.9160000085830688,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
    "prop6-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "edgeIds": Array [
      "basketball-run",
      "eat-run",
      "run-sleep",
    ],
    "id": "run",
    "prop5-COLLECTIVE_AVG": 6.715270042419434,
    "prop5-SINGLE_AVG": 6.715270042419434,
    "prop5-SINGLE_TALLY": 0.5830000042915344,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
    "prop6-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 1.4160000085830688,
    "edgeIds": Array [
      "basketball-sleep",
      "eat-sleep",
      "run-sleep",
    ],
    "id": "sleep",
    "prop5-COLLECTIVE_AVG": 7.000349998474121,
    "prop5-SINGLE_AVG": 7.000349998474121,
    "prop5-SINGLE_TALLY": 1.4160000085830688,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
    "prop6-SINGLE_TALLY": 0,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 10`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "basketball-eat",
    "nodeId1": "basketball",
    "nodeId2": "eat",
    "prop5-COLLECTIVE_AVG": 8.143219947814941,
    "prop5-SINGLE_AVG": 8.143219947814941,
    "prop5-SINGLE_TALLY": 0.5830000042915344,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
    "prop6-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.25,
    "id": "basketball-run",
    "nodeId1": "basketball",
    "nodeId2": "run",
    "prop5-COLLECTIVE_AVG": 9,
    "prop5-SINGLE_AVG": 9,
    "prop5-SINGLE_TALLY": 0.25,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
    "prop6-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 1.0829999446868896,
    "id": "basketball-sleep",
    "nodeId1": "basketball",
    "nodeId2": "sleep",
    "prop5-COLLECTIVE_AVG": 7.615419864654541,
    "prop5-SINGLE_AVG": 7.615419864654541,
    "prop5-SINGLE_TALLY": 1.0829999446868896,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
    "prop6-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "eat-run",
    "nodeId1": "eat",
    "nodeId2": "run",
    "prop5-COLLECTIVE_AVG": 6.715270042419434,
    "prop5-SINGLE_AVG": 6.715270042419434,
    "prop5-SINGLE_TALLY": 0.5830000042915344,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
    "prop6-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.9160000085830688,
    "id": "eat-sleep",
    "nodeId1": "eat",
    "nodeId2": "sleep",
    "prop5-COLLECTIVE_AVG": 7.000539779663086,
    "prop5-SINGLE_AVG": 7.000539779663086,
    "prop5-SINGLE_TALLY": 0.9160000085830688,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
    "prop6-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "run-sleep",
    "nodeId1": "run",
    "nodeId2": "sleep",
    "prop5-COLLECTIVE_AVG": 6.715270042419434,
    "prop5-SINGLE_AVG": 6.715270042419434,
    "prop5-SINGLE_TALLY": 0.5830000042915344,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
    "prop6-SINGLE_TALLY": 0,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 11`] = `
Object {
  "basketball": Object {
    "prop5-COLLECTIVE_AVG": 0.27355327491630926,
    "prop5-SINGLE_AVG": 0.27355327491630926,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
  },
  "eat": Object {
    "prop5-COLLECTIVE_AVG": 0.24222621043356943,
    "prop5-SINGLE_AVG": 0.24222621043356943,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
  },
  "run": Object {
    "prop5-COLLECTIVE_AVG": 0.24724753152762263,
    "prop5-SINGLE_AVG": 0.24724753152762263,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
  },
  "sleep": Object {
    "prop5-COLLECTIVE_AVG": 0.23697298312249868,
    "prop5-SINGLE_AVG": 0.23697298312249868,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 12`] = `
Object {
  "basketball": Object {
    "prop5-COLLECTIVE_AVG": 0.2739410643554668,
    "prop5-SINGLE_AVG": 0.2739410643554668,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
  },
  "eat": Object {
    "prop5-COLLECTIVE_AVG": 0.2418584351280758,
    "prop5-SINGLE_AVG": 0.2418584351280758,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
  },
  "run": Object {
    "prop5-COLLECTIVE_AVG": 0.24818189009777597,
    "prop5-SINGLE_AVG": 0.24818189009777597,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
  },
  "sleep": Object {
    "prop5-COLLECTIVE_AVG": 0.23601861041868105,
    "prop5-SINGLE_AVG": 0.23601861041868105,
    "prop6-COLLECTIVE_AVG": 0,
    "prop6-SINGLE_AVG": 0,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 13`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 1.0829999446868896,
    "edgeIds": Array [
      "basketball-eat",
      "basketball-run",
      "basketball-sleep",
    ],
    "id": "basketball",
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop7-SINGLE_TALLY": 0,
    "prop8-COLLECTIVE_AVG": 7.615419864654541,
    "prop8-SINGLE_AVG": 7.615419864654541,
    "prop8-SINGLE_TALLY": 1.0829999446868896,
  },
  Object {
    "COLLECTIVE_TALLY": 0.9160000085830688,
    "edgeIds": Array [
      "basketball-eat",
      "eat-run",
      "eat-sleep",
    ],
    "id": "eat",
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop7-SINGLE_TALLY": 0,
    "prop8-COLLECTIVE_AVG": 7.000539779663086,
    "prop8-SINGLE_AVG": 7.000539779663086,
    "prop8-SINGLE_TALLY": 0.9160000085830688,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "edgeIds": Array [
      "basketball-run",
      "eat-run",
      "run-sleep",
    ],
    "id": "run",
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop7-SINGLE_TALLY": 0,
    "prop8-COLLECTIVE_AVG": 6.715270042419434,
    "prop8-SINGLE_AVG": 6.715270042419434,
    "prop8-SINGLE_TALLY": 0.5830000042915344,
  },
  Object {
    "COLLECTIVE_TALLY": 1.4160000085830688,
    "edgeIds": Array [
      "basketball-sleep",
      "eat-sleep",
      "run-sleep",
    ],
    "id": "sleep",
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop7-SINGLE_TALLY": 0,
    "prop8-COLLECTIVE_AVG": 7.000349998474121,
    "prop8-SINGLE_AVG": 7.000349998474121,
    "prop8-SINGLE_TALLY": 1.4160000085830688,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 14`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "basketball-eat",
    "nodeId1": "basketball",
    "nodeId2": "eat",
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop7-SINGLE_TALLY": 0,
    "prop8-COLLECTIVE_AVG": 8.143219947814941,
    "prop8-SINGLE_AVG": 8.143219947814941,
    "prop8-SINGLE_TALLY": 0.5830000042915344,
  },
  Object {
    "COLLECTIVE_TALLY": 0.25,
    "id": "basketball-run",
    "nodeId1": "basketball",
    "nodeId2": "run",
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop7-SINGLE_TALLY": 0,
    "prop8-COLLECTIVE_AVG": 9,
    "prop8-SINGLE_AVG": 9,
    "prop8-SINGLE_TALLY": 0.25,
  },
  Object {
    "COLLECTIVE_TALLY": 1.0829999446868896,
    "id": "basketball-sleep",
    "nodeId1": "basketball",
    "nodeId2": "sleep",
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop7-SINGLE_TALLY": 0,
    "prop8-COLLECTIVE_AVG": 7.615419864654541,
    "prop8-SINGLE_AVG": 7.615419864654541,
    "prop8-SINGLE_TALLY": 1.0829999446868896,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "eat-run",
    "nodeId1": "eat",
    "nodeId2": "run",
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop7-SINGLE_TALLY": 0,
    "prop8-COLLECTIVE_AVG": 6.715270042419434,
    "prop8-SINGLE_AVG": 6.715270042419434,
    "prop8-SINGLE_TALLY": 0.5830000042915344,
  },
  Object {
    "COLLECTIVE_TALLY": 0.9160000085830688,
    "id": "eat-sleep",
    "nodeId1": "eat",
    "nodeId2": "sleep",
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop7-SINGLE_TALLY": 0,
    "prop8-COLLECTIVE_AVG": 7.000539779663086,
    "prop8-SINGLE_AVG": 7.000539779663086,
    "prop8-SINGLE_TALLY": 0.9160000085830688,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "run-sleep",
    "nodeId1": "run",
    "nodeId2": "sleep",
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop7-SINGLE_TALLY": 0,
    "prop8-COLLECTIVE_AVG": 6.715270042419434,
    "prop8-SINGLE_AVG": 6.715270042419434,
    "prop8-SINGLE_TALLY": 0.5830000042915344,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 15`] = `
Object {
  "basketball": Object {
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop8-COLLECTIVE_AVG": 0.27355327491630926,
    "prop8-SINGLE_AVG": 0.27355327491630926,
  },
  "eat": Object {
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop8-COLLECTIVE_AVG": 0.24222621043356943,
    "prop8-SINGLE_AVG": 0.24222621043356943,
  },
  "run": Object {
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop8-COLLECTIVE_AVG": 0.24724753152762263,
    "prop8-SINGLE_AVG": 0.24724753152762263,
  },
  "sleep": Object {
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop8-COLLECTIVE_AVG": 0.23697298312249868,
    "prop8-SINGLE_AVG": 0.23697298312249868,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 16`] = `
Object {
  "basketball": Object {
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop8-COLLECTIVE_AVG": 0.2739410643554668,
    "prop8-SINGLE_AVG": 0.2739410643554668,
  },
  "eat": Object {
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop8-COLLECTIVE_AVG": 0.2418584351280758,
    "prop8-SINGLE_AVG": 0.2418584351280758,
  },
  "run": Object {
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop8-COLLECTIVE_AVG": 0.24818189009777597,
    "prop8-SINGLE_AVG": 0.24818189009777597,
  },
  "sleep": Object {
    "prop7-COLLECTIVE_AVG": 0,
    "prop7-SINGLE_AVG": 0,
    "prop8-COLLECTIVE_AVG": 0.23601861041868105,
    "prop8-SINGLE_AVG": 0.23601861041868105,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 17`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 1.0829999446868896,
    "edgeIds": Array [
      "basketball-eat",
      "basketball-run",
      "basketball-sleep",
    ],
    "id": "basketball",
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop10-SINGLE_TALLY": 0,
    "prop9-COLLECTIVE_AVG": 7.615419864654541,
    "prop9-SINGLE_AVG": 7.615419864654541,
    "prop9-SINGLE_TALLY": 1.0829999446868896,
  },
  Object {
    "COLLECTIVE_TALLY": 0.9160000085830688,
    "edgeIds": Array [
      "basketball-eat",
      "eat-run",
      "eat-sleep",
    ],
    "id": "eat",
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop10-SINGLE_TALLY": 0,
    "prop9-COLLECTIVE_AVG": 7.000539779663086,
    "prop9-SINGLE_AVG": 7.000539779663086,
    "prop9-SINGLE_TALLY": 0.9160000085830688,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "edgeIds": Array [
      "basketball-run",
      "eat-run",
      "run-sleep",
    ],
    "id": "run",
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop10-SINGLE_TALLY": 0,
    "prop9-COLLECTIVE_AVG": 6.715270042419434,
    "prop9-SINGLE_AVG": 6.715270042419434,
    "prop9-SINGLE_TALLY": 0.5830000042915344,
  },
  Object {
    "COLLECTIVE_TALLY": 1.4160000085830688,
    "edgeIds": Array [
      "basketball-sleep",
      "eat-sleep",
      "run-sleep",
    ],
    "id": "sleep",
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop10-SINGLE_TALLY": 0,
    "prop9-COLLECTIVE_AVG": 7.000349998474121,
    "prop9-SINGLE_AVG": 7.000349998474121,
    "prop9-SINGLE_TALLY": 1.4160000085830688,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 18`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "basketball-eat",
    "nodeId1": "basketball",
    "nodeId2": "eat",
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop10-SINGLE_TALLY": 0,
    "prop9-COLLECTIVE_AVG": 8.143219947814941,
    "prop9-SINGLE_AVG": 8.143219947814941,
    "prop9-SINGLE_TALLY": 0.5830000042915344,
  },
  Object {
    "COLLECTIVE_TALLY": 0.25,
    "id": "basketball-run",
    "nodeId1": "basketball",
    "nodeId2": "run",
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop10-SINGLE_TALLY": 0,
    "prop9-COLLECTIVE_AVG": 9,
    "prop9-SINGLE_AVG": 9,
    "prop9-SINGLE_TALLY": 0.25,
  },
  Object {
    "COLLECTIVE_TALLY": 1.0829999446868896,
    "id": "basketball-sleep",
    "nodeId1": "basketball",
    "nodeId2": "sleep",
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop10-SINGLE_TALLY": 0,
    "prop9-COLLECTIVE_AVG": 7.615419864654541,
    "prop9-SINGLE_AVG": 7.615419864654541,
    "prop9-SINGLE_TALLY": 1.0829999446868896,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "eat-run",
    "nodeId1": "eat",
    "nodeId2": "run",
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop10-SINGLE_TALLY": 0,
    "prop9-COLLECTIVE_AVG": 6.715270042419434,
    "prop9-SINGLE_AVG": 6.715270042419434,
    "prop9-SINGLE_TALLY": 0.5830000042915344,
  },
  Object {
    "COLLECTIVE_TALLY": 0.9160000085830688,
    "id": "eat-sleep",
    "nodeId1": "eat",
    "nodeId2": "sleep",
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop10-SINGLE_TALLY": 0,
    "prop9-COLLECTIVE_AVG": 7.000539779663086,
    "prop9-SINGLE_AVG": 7.000539779663086,
    "prop9-SINGLE_TALLY": 0.9160000085830688,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "run-sleep",
    "nodeId1": "run",
    "nodeId2": "sleep",
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop10-SINGLE_TALLY": 0,
    "prop9-COLLECTIVE_AVG": 6.715270042419434,
    "prop9-SINGLE_AVG": 6.715270042419434,
    "prop9-SINGLE_TALLY": 0.5830000042915344,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 19`] = `
Object {
  "basketball": Object {
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop9-COLLECTIVE_AVG": 0.27355327491630926,
    "prop9-SINGLE_AVG": 0.27355327491630926,
  },
  "eat": Object {
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop9-COLLECTIVE_AVG": 0.24222621043356943,
    "prop9-SINGLE_AVG": 0.24222621043356943,
  },
  "run": Object {
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop9-COLLECTIVE_AVG": 0.24724753152762263,
    "prop9-SINGLE_AVG": 0.24724753152762263,
  },
  "sleep": Object {
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop9-COLLECTIVE_AVG": 0.23697298312249868,
    "prop9-SINGLE_AVG": 0.23697298312249868,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 20`] = `
Object {
  "basketball": Object {
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop9-COLLECTIVE_AVG": 0.2739410643554668,
    "prop9-SINGLE_AVG": 0.2739410643554668,
  },
  "eat": Object {
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop9-COLLECTIVE_AVG": 0.2418584351280758,
    "prop9-SINGLE_AVG": 0.2418584351280758,
  },
  "run": Object {
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop9-COLLECTIVE_AVG": 0.24818189009777597,
    "prop9-SINGLE_AVG": 0.24818189009777597,
  },
  "sleep": Object {
    "prop10-COLLECTIVE_AVG": 0,
    "prop10-SINGLE_AVG": 0,
    "prop9-COLLECTIVE_AVG": 0.23601861041868105,
    "prop9-SINGLE_AVG": 0.23601861041868105,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 21`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 1.0829999446868896,
    "edgeIds": Array [
      "basketball-eat",
      "basketball-run",
      "basketball-sleep",
    ],
    "id": "basketball",
    "prop11-COLLECTIVE_AVG": 7.615419864654541,
    "prop11-SINGLE_AVG": 7.615419864654541,
    "prop11-SINGLE_TALLY": 1.0829999446868896,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
    "prop12-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.9160000085830688,
    "edgeIds": Array [
      "basketball-eat",
      "eat-run",
      "eat-sleep",
    ],
    "id": "eat",
    "prop11-COLLECTIVE_AVG": 7.000539779663086,
    "prop11-SINGLE_AVG": 7.000539779663086,
    "prop11-SINGLE_TALLY": 0.9160000085830688,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
    "prop12-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "edgeIds": Array [
      "basketball-run",
      "eat-run",
      "run-sleep",
    ],
    "id": "run",
    "prop11-COLLECTIVE_AVG": 6.715270042419434,
    "prop11-SINGLE_AVG": 6.715270042419434,
    "prop11-SINGLE_TALLY": 0.5830000042915344,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
    "prop12-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 1.4160000085830688,
    "edgeIds": Array [
      "basketball-sleep",
      "eat-sleep",
      "run-sleep",
    ],
    "id": "sleep",
    "prop11-COLLECTIVE_AVG": 7.000349998474121,
    "prop11-SINGLE_AVG": 7.000349998474121,
    "prop11-SINGLE_TALLY": 1.4160000085830688,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
    "prop12-SINGLE_TALLY": 0,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 22`] = `
Array [
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "basketball-eat",
    "nodeId1": "basketball",
    "nodeId2": "eat",
    "prop11-COLLECTIVE_AVG": 8.143219947814941,
    "prop11-SINGLE_AVG": 8.143219947814941,
    "prop11-SINGLE_TALLY": 0.5830000042915344,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
    "prop12-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.25,
    "id": "basketball-run",
    "nodeId1": "basketball",
    "nodeId2": "run",
    "prop11-COLLECTIVE_AVG": 9,
    "prop11-SINGLE_AVG": 9,
    "prop11-SINGLE_TALLY": 0.25,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
    "prop12-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 1.0829999446868896,
    "id": "basketball-sleep",
    "nodeId1": "basketball",
    "nodeId2": "sleep",
    "prop11-COLLECTIVE_AVG": 7.615419864654541,
    "prop11-SINGLE_AVG": 7.615419864654541,
    "prop11-SINGLE_TALLY": 1.0829999446868896,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
    "prop12-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "eat-run",
    "nodeId1": "eat",
    "nodeId2": "run",
    "prop11-COLLECTIVE_AVG": 6.715270042419434,
    "prop11-SINGLE_AVG": 6.715270042419434,
    "prop11-SINGLE_TALLY": 0.5830000042915344,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
    "prop12-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.9160000085830688,
    "id": "eat-sleep",
    "nodeId1": "eat",
    "nodeId2": "sleep",
    "prop11-COLLECTIVE_AVG": 7.000539779663086,
    "prop11-SINGLE_AVG": 7.000539779663086,
    "prop11-SINGLE_TALLY": 0.9160000085830688,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
    "prop12-SINGLE_TALLY": 0,
  },
  Object {
    "COLLECTIVE_TALLY": 0.5830000042915344,
    "id": "run-sleep",
    "nodeId1": "run",
    "nodeId2": "sleep",
    "prop11-COLLECTIVE_AVG": 6.715270042419434,
    "prop11-SINGLE_AVG": 6.715270042419434,
    "prop11-SINGLE_TALLY": 0.5830000042915344,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
    "prop12-SINGLE_TALLY": 0,
  },
]
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 23`] = `
Object {
  "basketball": Object {
    "prop11-COLLECTIVE_AVG": 0.27355327491630926,
    "prop11-SINGLE_AVG": 0.27355327491630926,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
  },
  "eat": Object {
    "prop11-COLLECTIVE_AVG": 0.24222621043356943,
    "prop11-SINGLE_AVG": 0.24222621043356943,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
  },
  "run": Object {
    "prop11-COLLECTIVE_AVG": 0.24724753152762263,
    "prop11-SINGLE_AVG": 0.24724753152762263,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
  },
  "sleep": Object {
    "prop11-COLLECTIVE_AVG": 0.23697298312249868,
    "prop11-SINGLE_AVG": 0.23697298312249868,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
  },
}
`;

exports[`RealmGraphManager Should perform PageRank on Graphs 1-6 24`] = `
Object {
  "basketball": Object {
    "prop11-COLLECTIVE_AVG": 0.2739410643554668,
    "prop11-SINGLE_AVG": 0.2739410643554668,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
  },
  "eat": Object {
    "prop11-COLLECTIVE_AVG": 0.2418584351280758,
    "prop11-SINGLE_AVG": 0.2418584351280758,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
  },
  "run": Object {
    "prop11-COLLECTIVE_AVG": 0.24818189009777597,
    "prop11-SINGLE_AVG": 0.24818189009777597,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
  },
  "sleep": Object {
    "prop11-COLLECTIVE_AVG": 0.23601861041868105,
    "prop11-SINGLE_AVG": 0.23601861041868105,
    "prop12-COLLECTIVE_AVG": 0,
    "prop12-SINGLE_AVG": 0,
  },
}
`;
